# cliprl

./: .gitignore  README.md  analyze_demos.py  generate_curriculum_entries.py  main.py  main_il.py  pyproject.toml  test_simple_env.py
agents/: curriculum.py  il_agent.py  policy_network.py  ppo_agent.py  recurrent_policy.py
clip_rl_model/: dataset.py  model.py  train_clip.py
encoders/: language_encoder.py  trajectory_encoder.py
envs/: task_suite.py
experiments/: evaluate_transfer.py
trajectory/: bot_collector.py  collector.py
transfer/: initializer.py
utils/: config.py  il_config.py
