[project]
name = "cliprl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "minigrid==2.5.0",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.2.2",
    "stable-baselines3[extra]>=2.7.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "wandb>=0.24.2",
]
